# Tramp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  release.yaml
planning/: README.md
planning/archived/: .gitkeep
planning/backlog/: .gitkeep
planning/completed/: .gitkeep  protected-strings_improvement.md
tests/: test_annotations.py  test_as_completed.py  test_containers.py  test_matches.py  test_modules.py  test_optionals.py  test_protected_strings.py  test_results.py  test_sentinels.py  test_singleton.py
tramp/: _annotations.py  containers.py  protected_strings.py  results.py
tramp.egg-info/: SOURCES.txt
