[project]
name = "tramp"
version = "2025.3.001"
description = "A collection of utlities that can be used in other projects."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
